@@ -1,3 +1,14 @@
+2016-01-21 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCC.lex,
+	  src/SDCC.y,
+	  src/SDCCerr.c,
+	  src/SDCCerr.h,
+	  src/SDCCsymt.h,
+	  src/*/main.c,
+	  src/z80/gen.c:
+	  Implement declaration of preserved registers, RFE #483.
+
 2016-01-20 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/peep.c:
